[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/Dialog/select_variable_dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/Dialog/Fonts/NotoSansCJKtc-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.196078, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="InputEventKey" id=4]
scancode = 16777221

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="select_variable_dialog" type="Panel"]
margin_left = 36.0
margin_top = 94.0
margin_right = 260.0
margin_bottom = 203.0
rect_min_size = Vector2( 224, 109 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 208.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center][color=red]SELECT A LOCAL VARIABLE[/color][/center]"
text = "SELECT A LOCAL VARIABLE"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 208.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 25 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 55.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "Variable:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 208.0
margin_bottom = 31.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 208.0
margin_bottom = 89.0
alignment = 2

[node name="OK_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 119.0
margin_right = 150.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
shortcut = SubResource( 5 )
text = "OK"

[node name="Cancel_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 154.0
margin_right = 208.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Cancel"
[connection signal="item_rect_changed" from="VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_rect_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/OK_Button" to="." method="_on_OK_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_button_down"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_focus_exited"]
